# tetris

./: Cargo.toml  README.md  index.html
pkg/: tetris.d.ts  tetris.js  tetris_bg.wasm  tetris_bg.wasm.d.ts
pkg/snippets/wasm-react-f89d6169022618b4/src/react_bindings/: react-bindings.js
src/: __old_main.rs  lib.rs  main.rs  shape.rs  tetris.rs
