[package]
name = "tetris"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = "0.19"
gloo = "0.8.0"
getrandom = { version = "0.2.7", features = ["js"] }
js-sys = "0.3.58"
rand = "0.8.5"
wasm-bindgen = "0.2.81"
web-sys = { version = "0.3.58", features = ["HtmlElement", "Window", "HtmlDivElement"] }
